--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,7 +50,9 @@
     "size-limit": "^4.10.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.3",
-    "@blockedit/core": "^0.1.0"
+    "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "is-plain-object": "^5.0.0"
   }
 }
